js/js.translator/testData/incremental/invalidation/classFunctionsAndFields/main/m.kt
fun box() = Demo("test1").foo() + Demo("test2").foo_inline() + "${Demo("test3").field1}"
